--- a/public/views/user_home.html
+++ b/public/views/user_home.html
@@ -1,24 +1,26 @@
 <div ng-controller="CreatePollController">
     
-    Inside route....
-    <div ng-repeat="(key,value) in userInfo">
-        {{key}} --- {{value}}
-    </div>
-    
-    New Poll
     <form name="pollform" >
-        <div class="form-group">
-            <input type="text" class="form-control" placeholder="Poll question..." ng-model="poll.question" required>
-        </div>
-        <div class="form-group">
-            <label>Choices</label>
-            {{ poll.choices }}
-            <div ng-repeat="choice in poll.choices">
-                <input type="text" class="form-control" placeholder="Choice $index" ng-model="choice.text" required /> 
+        <div class="row">
+            <div class="col-sm-6 col-sm-offset-3">
+                <div class=".text-center page-header">
+                   <h1> New Poll </h1>
+                </div>
+                <div class="form-group">
+                    <label>Question</label>
+                    <input type="text" class="form-control" placeholder="Poll question..." ng-model="poll.question" required>
+                </div>
+                <label>Choices</label>
+                <div ng-repeat="choice in poll.choices">
+                    <div class="form-group">
+                        <input type="text" class="form-control" placeholder="Choice {{$index + 1}}" ng-model="choice.text" required /> 
+                    </div>
+                </div>
+                <button  class="btn btn-default pull-right" ng-click="poll.addChoice('')" > <i class="fa fa-plus"></i> </button>
+            </div>
+            <div class="col-sm-10 col-sm-offset-5">
+                <button type="submit" class="btn btn-primary" ng-click="createPoll()" > Create Poll </button>
             </div>
         </div>
-        <button type="submit" class="btn btn-primary" ng-click="addChoice()" > Add choice </button>
-        <button type="submit" class="btn btn-primary" ng-click="createPoll()" > Create Poll </button>
     </form>
-    
 </div>
