--- a/public/views/user_home.html
+++ b/public/views/user_home.html
@@ -3,9 +3,11 @@
     <form name="pollform" >
         <div class="row">
             <div class="col-sm-6 col-sm-offset-3">
+                <a href="/polls" class="btn btn-default" > View Polls </a>
                 <div class=".text-center page-header">
                    <h1> New Poll </h1>
                 </div>
+                
                 <div class="form-group">
                     <label>Question</label>
                     <input type="text" class="form-control" placeholder="Poll question..." ng-model="poll.question" required>
