--- a/public/views/poll.html
+++ b/public/views/poll.html
@@ -1,5 +1,5 @@
-<div class="container">
-    <div class="row">
+<div class="container page_bottom">
+    <div class="row ">
         <div class="col-sm-6 col-sm-offset-3">
             <div class="page-header">
                 <h1> Poll Data </h1>
@@ -7,19 +7,26 @@
             <div class="alert alert-danger" ng-show="errorMessage.length">
                {{errorMessage}}
             </div>
-            <div>
-               
-                <dl class="dl-horizontal">
-                    <dt><b>Poll</b></dt>
-                    <dd>{{poll.question}}</dd>
-                    <dt><b>Votes</b></dt>
-                    <dd></dd>
-                    <span ng-repeat="choice in poll.choices">
-                        <dt>{{choice.value}}</dt>
-                        <dd>{{choice.voteCount}}</dd>
-                    </span>
-                </dl>
+            
+            <div ng-show="userVoted">
+                Thanks! You have registered your vote for this poll!
             </div>
+            
+            <div ng-hide="userVoted" class="add_margin">
+                <ul class="list-group add_margin">
+                    <li data-ng-repeat="choice in poll.choices" class="list-group-item">
+                        <input type="radio" name="val" ng-model="vote.userVote" value="{{choice.value}}"/> {{choice.value}} 
+                    </li>
+                </ul>
+                <button type="submit" class="btn btn-default" ng-click="castVote()"> Vote </button>
+            </div>
+            
+            <div ng-show="userVoted " class="add_margin">
+                <canvas id="bar" class="chart chart-bar"
+                  chart-data="chart.data" chart-labels="chart.labels"> chart-series="series"
+                </canvas>
+            </div>
+            
             <a href="/polls" class="btn btn-default" > All Polls </a>
         </div>
     </div>
