--- a/public/views/user_home.html
+++ b/public/views/user_home.html
@@ -2,12 +2,10 @@
     
     <form name="pollform" >
         <div class="row">
+            <div class="col-sm-6 col-sm-offset-5">
+                 <h1> New Poll </h1>
+            </div>
             <div class="col-sm-6 col-sm-offset-3">
-                <a href="/polls" class="btn btn-default" > View Polls </a>
-                <div class=".text-center page-header">
-                   <h1> New Poll </h1>
-                </div>
-                
                 <div class="form-group">
                     <label>Question</label>
                     <input type="text" class="form-control" placeholder="Poll question..." ng-model="poll.question" required>
