--- a/public/views/about.html
+++ b/public/views/about.html
@@ -1,3 +1,22 @@
-<div class="page-header">
- <h1>About Voteplex</h1>
+<div class="about">
+    <div class="row ">
+            <div class="col-sm-3">
+                <i class="fa fa-bolt fa-medium"></i>
+                <h2> Vote </h2>
+            </div>
+            <div class="col-sm-1">
+                <i class="fa fa-arrow-right fa-small"></i>
+            </div>
+            <div class="col-sm-3">
+                <i class="fa fa-heart fa-medium"></i>
+                <h2> Love </h2>
+            </div>
+            <div class="col-sm-1">
+                <i class="fa fa-arrow-right fa-small"></i>
+            </div>
+            <div class="col-sm-3">
+                <i class="fa fa-magic fa-medium"></i>
+                <h2> Change </h2>
+            </div>
+    </div>
 </div>
